% fixed visibility of the alt keys in caps mode
git-svn-id: http://svn.debugger.ru/repos/jslibs/Virtual%20Keyboard/trunk@578 9a90dfcf-8112-0410-8cf2-8049563067c9

--- a/css/textual/keyboard.css
+++ b/css/textual/keyboard.css
@@ -149,7 +149,8 @@ html.VirtualKeyboardPopup, body.VirtualKeyboardPopup {
 #virtualKeyboard #kbDesk.modeCaps div.kbButton span.hiddenCaps,
 #virtualKeyboard #kbDesk.modeCaps div.kbButton span.charAlt,
 #virtualKeyboard #kbDesk.modeCaps div.kbButton span.charNormal,
-#virtualKeyboard #kbDesk.modeCaps div.kbButton span.charShift {
+#virtualKeyboard #kbDesk.modeCaps div.kbButton span.charShift,
+#virtualKeyboard #kbDesk.modeCaps div.kbButton span.charShiftAlt {
         display: none;
 }
 #virtualKeyboard #kbDesk.modeAlt div.kbButton span.charAlt,
